--- a/source/html/index.html
+++ b/source/html/index.html
@@ -4,14 +4,152 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MP1 Starter</title>
+    <title>EasyCook</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <div id="header" class="bg-top">
+            <div id="title1">
+                EasyCook
+            </div>
+            <!-- Navigation Bar -->
+            <ul id="navbar">
+                <li><a href="#section1" id="nav1" class="nav active">News</a></li>
+                <li><a href="#section2" id="nav2" class="nav">Menu</a></li>
+                <li><a href="#section3" id="nav3" class="nav">Special</a></li>
+            </ul>
+        </div>
+    </header>
 
-    <h2>Welcome to MP1!</h2>
+
+    <main id="main" class="fixed-bg">
+        <!-- Section 1 -->
+        <div id="section1" class="navtop sec">
+            <h1 class="title">News</h1>
+            <div class="carousel-container">
+                <div class="carousel">
+                    <div id="carousel-prev"></div>
+                    <ul class="carousel-indicator">
+                        <li class="carousel-pt active"></li>
+                        <li class="carousel-pt"></li>
+                        <li class="carousel-pt"></li>
+                        <li class="carousel-pt"></li>
+                    </ul>
+                    <div id="carousel-next"></div>
+                    <ul class="carousel-main">
+                        <li class="carousel-item fadein" id="carousel1">
+                            <img src="assets/brenda.jpg" alt="brenda">
+                        </li>
+                        <li class="carousel-item fadein" id="carousel2">
+                            <img src="assets/chocolate.jpg" alt="chocolate">
+                        </li>
+                        <li class="carousel-item fadein" id="carousel3">
+                            <img src="assets/pie.jpg" alt="pie">
+                        </li>
+                        <li class="carousel-item fadein" id="carousel4">
+                            <img src="assets/orange.jpg" alt="orange">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- Section 2 -->
+        <div id="section2" class="navtop sec">
+            <h1 class="title">Menu</h1>
+            <div class="column" id="menus">
+                <div class="menu" id="menu1">
+                    <h2>Sweet Cinnamon Tamal</h2>
+                    <img src="assets/menu1.jpg" alt="menu1" id="img_sm1" class="img_sm">
+                    <div id="modal1" class="modal">
+                        <span class="close" id="close1">&times;</span>
+                        <img class="modal-content fadein" id="img_lg1">
+                        <div class="caption fadein" id="cap1">
+                            <p>Tamales are traditionally wrapped in individual corn husks and steamed, but baking a single large-format tamal in a foil-covered pan set in a roasting pan of hot water produces a similarly tender texture. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu" id="menu2">
+                    <h2>Spiced Chickpeas</h2>
+                    <img src="assets/menu2.jpg" alt="menu2" id="img_sm2" class="img_sm">
+                    <div id="modal1" class="modal">
+                        <span class="close" id="close2">&times;</span>
+                        <img class="modal-content fadein" id="img_lg2">
+                        <div class="caption fadein" id="cap2">
+                            <p>Everything’s better in bowl form, and this salmon dish flavored with a garlicky za’atar dressing is no exception. This recipe is one of the 100+ in Epicurious's new cookbook.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu" id="menu3">
+                    <h2>Classic Chicken Pho</h2>
+                    <img src="assets/menu3.jpg" alt="menu3" id="img_sm3" class="img_sm">
+                    <div id="modal1" class="modal">
+                        <span class="close" id="close3">&times;</span>
+                        <img class="modal-content fadein" id="img_lg3">
+                        <div class="caption fadein" id="cap3">
+                            <p>Most people assume that pho is a beefy affair, but a chicken version has been around since the late 1930s. It’s actually easier to make than beef pho: there are fewer ingredients involved and less finesse required for superlative results.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Section 3 -->
+        <div id="section3" class="navtop sec">
+            <h1 class="title">Special</h1>
+            <h2>How to Throw a Cheese Ball Party</h2>
+            <p>BY EMILY JOHNSON</p>
+            <div class="column">
+                <video controls>
+                    <source src="assets/video.mp4" type="video/mp4">
+                    Your browser does not support HTML5 video.
+                </video>
+                <div id="para">
+                    <p>Emily is an entertaining newbie. Anna is a party pro. In The Party Project, they work together to create dinner party perfection.<br>
+                       Recently, a book by Dena Rayess called Cheese Balls came across my desk. Like the virus that kills A-list actors in the 2011 film Contagion, the cheese ball book, with its grotesque-but-delicious-looking mounds of cheese, overtook me. It also made an impact on my coworker Becky. We determined that there was no solution but to host a party and force-feed our friends globs of fortified cream cheese.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="sideadd">
+                <h2>Links</h2>
+                <ul id="social">
+                    <li>
+                        <a href="https://www.facebook.com"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://snapchat.com"><i class="fa fa-snapchat-square fa-3x" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="address">
+                <h2>Our Address</h2>
+                <p>Thomas M. Siebel Center for Computer Science<br>
+                201 North Goodwin Avenue MC 258<br>
+                Urbana, IL 61801-2302</p>
+            </div>
+        </footer>
+
+    </main>
+
+
 
     <script src="bundle.js" type="text/javascript"></script>
 </body>
+
 
 </html>
