--- a/source/html/index.html
+++ b/source/html/index.html
@@ -123,16 +123,16 @@
                 <h2>Links</h2>
                 <ul id="social">
                     <li>
-                        <a href="https://www.facebook.com"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+                        <a href="https://www.facebook.com"><i id = "icon1" class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com"><i id = "icon2" class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                        <a href="https://linkedin.com"><i id = "icon3" class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
                     </li>
                     <li>
-                        <a href="https://snapchat.com"><i class="fa fa-snapchat-square fa-3x" aria-hidden="true"></i></a>
+                        <a href="https://snapchat.com"><i id = "icon4" class="fa fa-snapchat-square fa-3x" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </div>
@@ -145,8 +145,6 @@
         </footer>
 
     </main>
-
-
 
     <script src="bundle.js" type="text/javascript"></script>
 </body>
